[gd_scene load_steps=12 format=2]

[ext_resource path="res://data/players/player_2.tscn" type="PackedScene" id=1]
[ext_resource path="res://data/players/player_1.tscn" type="PackedScene" id=2]
[ext_resource path="res://data/players/Control.tscn" type="PackedScene" id=3]
[ext_resource path="res://data/puzzle_objects/button.tscn" type="PackedScene" id=4]
[ext_resource path="res://data/scripts/wall.gd" type="Script" id=5]
[ext_resource path="res://data/scripts/platform.gd" type="Script" id=6]
[ext_resource path="res://data/scripts/finish_area.gd" type="Script" id=7]

[sub_resource type="Animation" id=1]
resource_name = "close"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 80, -64 ), Vector2( 80, 0 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "open"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 80, 0 ), Vector2( 80, -64 ) ]
}

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 56, 64 )

[sub_resource type="Animation" id=4]
tracks/0/type = "value"
tracks/0/path = NodePath("puzzle_geometry/platform:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 368 ), Vector2( 0, 200 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("puzzle_geometry/wall:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 528, 0 ), Vector2( 80, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("puzzle_geometry/button_1:position")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -152, -360 ), Vector2( -152, 184 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("puzzle_geometry/button_2:position")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 144, -360 ), Vector2( 144, 184 ) ]
}

[node name="world" type="Node2D"]

[node name="camera" type="Camera2D" parent="."]
current = true

[node name="puzzle_geometry" type="Node2D" parent="."]

[node name="platform" type="RigidBody2D" parent="puzzle_geometry"]
position = Vector2( 0, 200 )
mode = 1
script = ExtResource( 6 )

[node name="collision" type="CollisionPolygon2D" parent="puzzle_geometry/platform"]
polygon = PoolVector2Array( -208, -72, -192, -72, -192, -8, 192, -8, 192, -72, 208, -72, 208, 8, 8, 8, 8, 312, -8, 312, -8, 8, -208, 8 )

[node name="shape" type="Polygon2D" parent="puzzle_geometry/platform"]
polygon = PoolVector2Array( -192, -8.00003, 192, -8.00002, 192, -72, 208, -72, 208, 8, 8, 8, 8, 312, -8, 312, -8, 8, -208, 8, -208, -72, -192, -72 )

[node name="button_1" parent="puzzle_geometry" instance=ExtResource( 4 )]
position = Vector2( -152, 184 )

[node name="button_2" parent="puzzle_geometry" instance=ExtResource( 4 )]
position = Vector2( 144, 184 )

[node name="border" type="StaticBody2D" parent="puzzle_geometry"]

[node name="collision" type="CollisionPolygon2D" parent="puzzle_geometry/border"]
polygon = PoolVector2Array( -584, -328, -584, 512, -568, 512, -568, -312, 568, -312, 568, 512, 584, 512, 584, -328 )

[node name="wall" type="RigidBody2D" parent="puzzle_geometry"]
position = Vector2( 80, 0 )
mode = 1
continuous_cd = 2
script = ExtResource( 5 )

[node name="collision" type="CollisionPolygon2D" parent="puzzle_geometry/wall"]
polygon = PoolVector2Array( -8, -336, 8, -336, 8, 192, -8, 192 )

[node name="shape" type="Polygon2D" parent="puzzle_geometry/wall"]
polygon = PoolVector2Array( -8, -336, 8, -336, 8, 192, -8, 192 )

[node name="animation" type="AnimationPlayer" parent="puzzle_geometry/wall"]
anims/close = SubResource( 1 )
anims/open = SubResource( 2 )

[node name="finish_area" type="Area2D" parent="puzzle_geometry"]
position = Vector2( 144, 104 )
script = ExtResource( 7 )

[node name="area" type="CollisionShape2D" parent="puzzle_geometry/finish_area"]
position = Vector2( 0, 24 )
shape = SubResource( 3 )

[node name="player_1" parent="." instance=ExtResource( 2 )]

[node name="player_2" parent="." instance=ExtResource( 1 )]

[node name="Control" parent="." instance=ExtResource( 3 )]

[node name="animations" type="AnimationPlayer" parent="."]
autoplay = "start"
anims/start = SubResource( 4 )
[connection signal="animation_finished" from="puzzle_geometry/wall/animation" to="puzzle_geometry/wall" method="_on_animation_animation_finished"]
[connection signal="body_entered" from="puzzle_geometry/finish_area" to="puzzle_geometry/finish_area" method="_on_finish_area_body_entered"]
[connection signal="body_exited" from="puzzle_geometry/finish_area" to="puzzle_geometry/finish_area" method="_on_finish_area_body_exited"]
